objects/Lead.object
<CustomObject>
    <fields>
        <fullName>SDO_Sales_Decision_Timeframe__c</fullName>
        <description>What: What is the timeframe for the decision.</description>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Checkbox for if they have a budget. Used in page layout.</description>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What; Decision Maker Field</description>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Quality__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 0, &apos;015Hr000004ZYx6&apos;, &apos;015Hr000004ZYx7&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 5, &apos;015Hr000004ZYx6&apos;, &apos;015Hr000004ZYx7&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 10, &apos;015Hr000004ZYx6&apos;, &apos;015Hr000004ZYx7&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 15, &apos;015Hr000004ZYx6&apos;, &apos;015Hr000004ZYx7&apos;),&apos;&apos;,24,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Total__c</fullName>
        <description>What: Formula to calculate total score from score fields.</description>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Product_Interest__c</fullName>
        <description>What: What products are they interested in.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Project Defined Field used in page layouts.</description>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Message__c</fullName>
        <description>The content of the SMS message to send out via a quick action and process builder</description>
        <label>SMS Message</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( SDO_Sales_Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(SDO_Sales_Decision_Timeframe__c  ,&quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;, 3, &quot;6-12 Months&quot;, 2, &quot;Next Year&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>IF( SDO_Sales_Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shadow_Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo updated Jan 2020.</description>
        <inlineHelpText>Determines which image shows when you click the &quot;Analyze Roof Type&quot; button.  These are called &quot;RooftopFlat&quot; and &quot;RooftopPitched&quot; inside the static resource &quot;EinsteinVisionRooftopImages&quot;.</inlineHelpText>
        <label>Shadow Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States_Licensed_in__c</fullName>
        <label>States Licensed in</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>CONV Non-Conforming</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;),
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)),
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>escore__c</fullName>
        <label>Einstein - Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Loans__c</fullName>
        <label># of Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Account Engagement Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Account Engagement and are available to customers using Account Engagement Pro Edition and Account Engagement Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Account Engagement Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Account Engagement Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Account Engagement campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Account Engagement Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Account Engagement Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when an Account Engagement tracked anonymous visitor first became a known prospect.</description>
        <label>Account Engagement Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
        <label>Account Engagement Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Account Engagement First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Account Engagement First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Account Engagement First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Account Engagement First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Account Engagement grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Account Engagement Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Account Engagement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Account Engagement Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Account Engagement score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Account Engagement. From there you can view his or her complete activity history. This URL is generated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Advisor_Candidate_M_A</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FINS_Advisor_Candidate_M_A</value>
        </filters>
        <label>Advisor Candidate - M&amp;A</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>FINS_Advisor_Candidate_M_A</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FINS_Advisor_Candidate_M_A</value>
        </filters>
        <label>Advisor Candidate - M&amp;A</label>
    </listViews>
    <listViews>
        <fullName>FINS_Mortgage_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>FINS_Lending_Loan_Purpose__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>Lead_Score_Value__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FINS_Lending_Mortgage</value>
        </filters>
        <label>Mortgage Leads</label>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_1_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 1 Queue</label>
        <queue>FINS_Tier_1_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_2_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <queue>FINS_Tier_2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FINS_Tier_3_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Queue</label>
        <queue>FINS_Tier_3_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <label>Closed Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FINS_Commercial_Banking_Loan,Lead.FinServ__Referral</value>
        </filters>
        <label>Open Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>Hot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDO_Sales_Lead_Total__c</field>
            <operation>greaterOrEqual</operation>
            <value>20</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>All - Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Registrations</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Registrations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>FINS_Advisor_Candidate_M_A</fullName>
        <active>true</active>
        <businessProcess>Advisor Candidate - M%26A</businessProcess>
        <label>Advisor Candidate - M&amp;A</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Commercial_Banking_Loan</fullName>
        <active>true</active>
        <businessProcess>FINS - CB Lead Process</businessProcess>
        <description>Commercial Banking - Loan</description>
        <label>Commercial Banking - Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Lending_Mortgage</fullName>
        <active>true</active>
        <businessProcess>Mortgage Borrower</businessProcess>
        <description>Lending - Mortgage</description>
        <label>Lending - Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_WM_Lead_Record_Type_General</fullName>
        <active>false</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Wealth Management - General - Bad</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Wealth_Management_General</fullName>
        <active>true</active>
        <businessProcess>FINS - WM Lead Process - General</businessProcess>
        <label>Wealth Management - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Wealth_Prospect</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Wealth Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__BusinessReferral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A business or organization that is a commercial banking business referral​</description>
        <label>Business Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Referral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A person, business, or organization that is a referral</description>
        <label>Person Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Partner_Application</fullName>
        <active>true</active>
        <businessProcess>Partner Recruitment</businessProcess>
        <description>Used when a potential partner applies to the partner program.</description>
        <label>Lead - Partner Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Lead_DealRegistration</fullName>
        <active>true</active>
        <businessProcess>Deal Registration Lead</businessProcess>
        <description>Used by partners to register leads in the Partner Community.</description>
        <label>Lead - Deal Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Lead_Default</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Standard lead qualification and conversion process.</description>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
</CustomObject>